--- a/sc_updated.css
+++ b/sc_updated.css
@@ -1,60 +1,54 @@
-
-.watches{
-    display: flex;
-    flex-direction: row;
-    
+.nav{
+  background: #000;
+  padding: 25px 40px;
+  color: aliceblue;
+  margin-bottom: 30px;
 }
-/* body{
-    background-color:#4b4b4b;
-  } */
+.watches{
+  display: flex;
+  border: 5px solid blue;
+  gap: 30px;
+  justify-content: center;
+}
+.watch{
+  display: flex;
+  flex-direction: column;
+  border: 1px solid #000;
+  width: 220px;
+  /* height: 270px; */
+}
+.watch-price{
+  padding: 2px 5px;
+  border: 1px solid #000;
+  
+}
+.watch-title{
+  padding: 2px 5px;
+}
+.total-price-quanity{
+  padding: 2px 5px;
+}
+.quantity-details{
+  margin-bottom: 0;
+}
 
-  *{
-    font-family: 'Poppins', sans-serif;
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    background-color:#4b4b4b;
-  }
-  .container{
-    max-width: 1200px;
-    padding: 4rem;
-    margin: auto;
-    width: 100%;
-  }
-  .add-cart{
-    /* position: absolute; */
-   
-    
-    /* right: 0;  */
-    background-color: #2ed573;
-    color:white;
-    padding: 8px;
-    font-size: 1.1rem;
-    cursor: pointer;
-    transition: 0.5s;
-  }
-  .watch{
-    display: flex;
-    flex-direction: column;
-    width: 250px;
-    border:5px solid white;
-  }
-  .watch-img{
-    margin: 20px;
-  }
-  .watch-title{
-    color: #ff6348;
-  }
-  .cart-img{
-    width: 30px;
-  }
-  .cart-content{
-    display: flex;
-    flex-direction: column;
-  }
-  .cart-box{
-    display: flex;
-    flex-direction: column;
-    width: 250px;
-    border:5px solid white;
-  }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
